исправление ошибок валидации, филтрации и аннотации
